Add `-std=c99` to `CFLAGS` in `MakefileSDLC`
Required for gcc "`for` loop initial declarations" errors in `sdlrun2.c`

--- a/src/MakefileSDLC
+++ b/src/MakefileSDLC
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = `idris --include` `sdl2-config --cflags`
+CFLAGS = `idris --include` `sdl2-config --cflags` -std=c99
 
 sdlrun2.o: config sdlrun2.c sdlrun2.h
 
